# sca

./: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.rus  Doxyfile.rus.in  INSTALL  Makefile.am  README  autogen.sh  configure.ac  sca-uninstalled.pc.in  sca.pc.in
cmake/: CMakeLists.txt  CheckPrototypeExists.cmake  FindSCA.cmake  sca-config-version.cmake.in  sca-config.cmake.in
config/win32/: config.h  scalib.def
src/: CMakeLists.txt  Makefile.am  scaangle.c  scaangle.h  scacoordinates.c  scacoordinates.h  scaearth.c  scaearth.h  scajulianday.c  scajulianday.h  scalib.def.in  scalib.h  scamacros.h  scamisc.c  scamisc.h  scamoon.c  scamoon.h  scaplanetdata.c  scaplanetdata.h  scaprivate.h  scastar.c  scastar.h  scasun.c  scasun.h
